fix: bug in modal, z-index implemented

--- a/style.css
+++ b/style.css
@@ -225,6 +225,8 @@ td.expense {
 
   opacity: 0;
   visibility: hidden;
+
+  z-index: 2;
 }
 
 .modal-overlay.active {
@@ -235,6 +237,8 @@ td.expense {
 .modal {
   background: #f0f2f5;
   padding: 2.4rem;
+  position: relative;
+  z-index: 1;
 }
 
 /* Form */
